Add support for candela vis of tab-delimited files

--- a/plugins/candela/web_client/templates/configView.pug
+++ b/plugins/candela/web_client/templates/configView.pug
@@ -6,5 +6,7 @@ p
   |  to render table files directly in Girder.
 
 p.
-  This plugin requires no configuration. Simply upload a CSV file as an item,
-  then set the Candela visualization type and options.
+  This plugin requires no configuration. Simply upload a CSV file as an item
+  with a name ending in .csv, or a tab-delimited file with a name ending
+  in .tsv or .tab, then set the Candela visualization type and options and
+  click Update to generate a visualization.
