--- a/plugins/mongo_search_datavault/web_client/templates/paginateSearchWidget.pug
+++ b/plugins/mongo_search_datavault/web_client/templates/paginateSearchWidget.pug
@@ -5,7 +5,7 @@
 .g-mongo-search-container
     h1.display-4.m-b-2 Metadata Search
     form.g-mongo-search-form
-      table.search-table 
+      table.g-search-table
         thead
           th(style="text-align: center;font-weight: bold;font-size: 15pt;") Metadata
           th(style="text-align: center;font-weight: bold;font-size: 15pt;") lower limit
