--- a/plugins/mongo_search_datavault/web_client/templates/paginateSearchWidget.pug
+++ b/plugins/mongo_search_datavault/web_client/templates/paginateSearchWidget.pug
@@ -20,32 +20,109 @@
               input.form-control(type="number" name="mass1_upper" id="mass1_upper" style="width: 200pt;")
           tr 
             td 
+              label(for="mass2") mass2:
+            td
+              input.form-control(type="number" name="mass2_lower" id="mass2_lower" style="width: 200pt;")
+            td
+              input.form-control(type="number" name="mass2_upper" id="mass2_upper" style="width: 200pt;")
+   
+          tr 
+            td 
               label(for="spin1x") spin1x:
             td
               input.form-control(type="number" name="spin1x_lower" id="spin1x_lower" style="width: 200pt;")
             td
               input.form-control(type="number" name="spin1x_upper" id="spin1x_upper" style="width: 200pt;")
-          //- tr 
-          //-   td 
-          //-     label(for="Lmax") Lmax:
-          //-   td
-          //-     input.form-control(type="number" name="Lmax_lower" id="lmax_lower" style="width: 200pt;")
-          //-   td
-          //-     input.form-control(type="number" name="Lmax_upper" id="lmax_upper" style="width: 200pt;")
-          //- tr 
-          //-   td 
-          //-     label(for="eccentricity") eccentricity:
-          //-   td
-          //-     input.form-control(type="number" name="ecc_lower" id="ecc_lower" style="width: 200pt;")
-          //-   td
-          //-     input.form-control(type="number" name="ecc_upper" id="ecc_upper" style="width: 200pt;") 
-          //- tr 
-          //-   td 
-          //-     label(for="LNx") LNx:
-          //-   td
-          //-     input.form-control(type="number" name="LNx_lower" id="lnx_lower" style="width: 200pt;")
-          //-   td
-          //-     input.form-control(type="number" name="LNx_upper" id="lnx_upper" style="width: 200pt;")
+         
+          tr 
+            td 
+              label(for="spin1y") spin1y:
+            td
+              input.form-control(type="number" name="spin1y_lower" id="spin1y_lower" style="width: 200pt;")
+            td
+              input.form-control(type="number" name="spin1y_upper" id="spin1y_upper" style="width: 200pt;")
+          tr 
+            td 
+              label(for="spin1z") spin1z:
+            td
+              input.form-control(type="number" name="spin1z_lower" id="spin1z_lower" style="width: 200pt;")
+            td
+              input.form-control(type="number" name="spin1z_upper" id="spin1z_upper" style="width: 200pt;")
+
+          tr 
+            td 
+              label(for="spin2x") spin2x:
+            td
+              input.form-control(type="number" name="spin2x_lower" id="spin2x_lower" style="width: 200pt;")
+            td
+              input.form-control(type="number" name="spin2x_upper" id="spin2x_upper" style="width: 200pt;")
+         
+          tr 
+            td 
+              label(for="spin2y") spin2y:
+            td
+              input.form-control(type="number" name="spin2y_lower" id="spin2y_lower" style="width: 200pt;")
+            td
+              input.form-control(type="number" name="spin2y_upper" id="spin2y_upper" style="width: 200pt;")
+          tr 
+            td 
+              label(for="spin2z") spin2z:
+            td
+              input.form-control(type="number" name="spin2z_lower" id="spin2z_lower" style="width: 200pt;")
+            td
+              input.form-control(type="number" name="spin2z_upper" id="spin2z_upper" style="width: 200pt;")
+          //- list all the search mask using the NR Injection paper
+          tr 
+            td 
+              label(for="LNhatx") LNhatx:
+            td
+              input.form-control(type="number" name="LNhatx_lower" id="LNhatx_lower" style="width: 200pt;")
+            td
+              input.form-control(type="number" name="LNhatx_upper" id="LNhatx_upper" style="width: 200pt;")
+          tr 
+            td 
+              label(for="LNhaty") LNhaty:
+            td
+              input.form-control(type="number" name="LNhaty_lower" id="LNhaty_lower" style="width: 200pt;")
+            td
+              input.form-control(type="number" name="LNhaty_upper" id="LNhaty_upper" style="width: 200pt;")
+          tr 
+            td 
+              label(for="LNhatz") LNhatz:
+            td
+              input.form-control(type="number" name="LNhatz_lower" id="LNhatz_lower" style="width: 200pt;")
+            td
+              input.form-control(type="number" name="LNhatz_upper" id="LNhatz_upper" style="width: 200pt;")
+
+          tr 
+            td 
+              label(for="nhatx") nhatx:
+            td
+              input.form-control(type="number" name="nhatx_lower" id="nhatx_lower" style="width: 200pt;")
+            td
+              input.form-control(type="number" name="nhatx_upper" id="nhatx_upper" style="width: 200pt;")
+          tr 
+            td 
+              label(for="nhaty") nhaty:
+            td
+              input.form-control(type="number" name="nhaty_lower" id="nhaty_lower" style="width: 200pt;")
+            td
+              input.form-control(type="number" name="nhaty_upper" id="nhaty_upper" style="width: 200pt;")
+          tr 
+            td 
+              label(for="nhatz") nhatz:
+            td
+              input.form-control(type="number" name="nhatz_lower" id="nhatz_lower" style="width: 200pt;")
+            td
+              input.form-control(type="number" name="nhatz_upper" id="nhatz_upper" style="width: 200pt;")
+
+          tr 
+            td 
+              label(for="eccentricity") eccentricity:
+            td
+              input.form-control(type="number" name="ecc_lower" id="ecc_lower" style="width: 200pt;")
+            td
+              input.form-control(type="number" name="ecc_upper" id="ecc_upper" style="width: 200pt;") 
            
       a.g-submit-search.btn.btn-primary Search
       //- button.btn.btn-primary(type='submit') Search 
