search result selection manipulationAdded a unselect all and invert selection button

--- a/plugins/mongo_search_datavault/web_client/templates/SearchResult.pug
+++ b/plugins/mongo_search_datavault/web_client/templates/SearchResult.pug
@@ -3,6 +3,8 @@
   .g-search-result-type-header.g-search-results-type-title
     | #{collectionName}
 a.g-select-result.btn.btn-primary Select All
+a.g-unselect-result.btn.btn-primary Unselect All
+a.g-invert-selection.btn.btn-primary Invert select
 ul.g-search-results-type
   each element in results
     li.g-search-result
